# chess

./: .dockerignore  .gitignore  .gitmodules  .local-server.patch  .local.patch  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.fly  LICENSE  README.md  Trunk.toml  cargo_check_all.sh  deploy-web.sh  diesel.toml  fly.toml  get_architecture.sh  index.html  package-lock.json  setup.sh  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ai-code-review.yaml  ai-reviewer.yaml  deploy-web.yaml  rust.yaml  rustfmt.yaml  update-docker.yaml
app/: .allow-stopping.patch  Cargo.toml  Dioxus.toml  build-stockfish.sh  build.rs  package-lock.json  package.json  tailwind.config.js
app/build_utils/: complimentary_colors.rs  helpers.rs  migration.rs  mod.rs
app/migrations/: 20231126065143_create_initial_tables.sql  20231203044653_accounts.up.sql
app/src/: lib.rs  main.rs
app/src/client/: arrows.rs  mod.rs  mouse_click.rs  router.rs  shared_states.rs  storage.rs
app/src/client/components/: app.rs  arrow.rs  board.rs  board_buttons.rs  board_square.rs  info_bar.rs  mod.rs  nav_bar.rs  round_list.rs  router.rs  settings.rs  sign_up.rs  timer.rs  widget.rs
app/src/client/stockfish/: core.rs  eval.rs  mod.rs
app/src/client/stockfish/interface/: desktop_interface.rs  web_interface.rs
app/src/client/system_info/: web.rs
app/src/common/: args.rs  mod.rs  theme.rs
app/src/server/: auth.rs  database.rs  game_socket.rs  launcher.rs  mailer.rs  mod.rs
app/src/server/database/: connection.rs  mod.rs
app/src/server/server_functions/: accounts.rs  get_themes.rs  mod.rs
app/styles/: input.css
auto-deref/: Cargo.toml
auto-deref/src/: lib.rs
build_common/: Cargo.toml  build-tailwind.sh
build_common/src/: command_config.rs  helpers.rs  lib.rs
chess/: Cargo.toml
chess-app/: Cargo.toml  build.rs
chess-app/src/: lib.rs  main.rs
chess-app/src/client/: stockfish_client.rs
chess-app/src/core/: arrow.rs  game_socket.rs  info_bar.rs  mod.rs  widget.rs
chess/src/: board.rs  board_state.rs  castling_rights.rs  chess_result.rs  color.rs  displacement.rs  game.rs  game_builder.rs  game_status.rs  history.rs  lib.rs  moves.rs  piece.rs  piece_count.rs  pieces.rs  player.rs  position.rs  result.rs  round_info.rs  timer.rs  turn.rs
client/: Cargo.toml  Trunk.toml  build-npx.sh  build-stockfish.sh  build-tailwind.sh  build-trunk.sh  build.rs  package.json  tailwind.config.js
client/src/: app.rs  arrow.rs  arrows.rs  board.rs  chess_widget.rs  game_socket.rs  helpers.rs  info_bar.rs  launcher.rs  lib.rs  main.rs  mouse_click.rs  mouse_down.rs  ray.rs  round_list.rs  shared_states.rs  stockfish_client.rs  stockfish_interface_desktop.rs  stockfish_interface_web.rs  timer.rs  widget.rs
client/src/client/: game_socket.rs  helpers.rs  mod.rs  mouse_click.rs
client/src/client/components/: app.rs  arrow.rs  board.rs  eval_bar.rs  piece.rs  settings.rs  widget.rs
client/src/client/stockfish/: core.rs
client/src/client/stockfish/interface/: desktop_interface.rs
client/src/client/system_info/: mod.rs
client/src/components/: app.rs  arrow.rs  board.rs  board_buttons.rs  board_square.rs  eval_bar.rs  info_bar.rs  mod.rs  piece.rs  round_list.rs  settings.rs  square.rs  theme_select.rs  timer.rs  widget.rs
client/src/desktop/: game_socket.rs
client/src/server/: game_socket.rs  mod.rs
client/src/server/server_functions/: games.rs  get_themes.rs  mod.rs  setup_remote_game.rs
client/src/stockfish/: client.rs  core.rs  eval.rs  mod.rs  stockfish_interface.rs
client/src/stockfish/desktop/: implement.rs  interface.rs  mod.rs
client/src/stockfish/interface/: desktop_interface.rs  mod.rs  web_interface.rs
client/src/stockfish/web/: implement.rs  interface.rs  mod.rs
client/src/system_info/: desktop.rs  mod.rs  web.rs
client/src/web/: game_socket.rs
client/styles/: input.css  output.css
common/: Cargo.toml
common/src/: args.rs  config.rs  lib.rs  server_functions.rs  theme.rs
database/: Cargo.toml
database/migrations/: 20231227220228_email.down.sql  20231227220228_email.up.sql  20231228082837_is_email_verified.down.sql  20231228082837_is_email_verified.up.sql  20231230083231_email_verification_tokens.down.sql  20231230083231_email_verification_tokens.up.sql
database/src/: lib.rs  main.rs
docs/: chess-63faf783da09e66d.js  chess-63faf783da09e66d_bg.wasm  index.html
docs/snippets/dioxus-interpreter-js-7853214f69bd9fe6/: inline0.js
images/boards/clouds_bermuda/: complimentary-colors.txt
images/boards/danya/: complimentary-colors.txt
images/boards/marino/: complimentary-colors.txt
images/boards/qootee/: complimentary-colors.txt
images/boards/wood13/: complimentary-colors.txt
images/boards/wood3/: complimentary-colors.txt
migrations/2023-09-17-065240_create_users/: up.sql
scripts/: delete_complimentary_colors.sh
server/: Cargo.toml  build.rs
server-functions/: Cargo.toml
server-functions/src/: get_user_data.rs  lib.rs  setup_remote_game.rs
server/src/: database.rs  game_socket.rs  lib.rs  main.rs
src/: app.rs  board.rs  castling_rights.rs  chess_widget.rs  displacement.rs  game.rs  lib.rs  main.rs  moves.rs  pieces.rs  player.rs  schema.rs  timer.rs
src/desktop/: game_socket.rs
src/server/: game_socket.rs
src/web/: game_socket.rs
stockfish-wasm/: stockfish.js  stockfish.worker.js
styles/: app.css  chess_widget.css  input.css  output.css  widget.css
tests/: test_pieces.rs
