[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
once_cell = "1.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.3.0"
