[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dioxus = "0.3.2"
futures-util = "0.3.28"
once_cell = "1.18.0"
serde = "1.0.167"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
url = "2.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.3.0"
