[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"], optional = true }
clap = { version = "4.3.16", features = ["derive"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", optional = true }
dioxus-fullstack = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["axum"], optional = true }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git", features = ["hydrate"], optional = true }
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
serde = "1.0.171"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.19.0", optional = true }
url = "2.4.0"
web-time = { version = "0.2.0", optional = true }

[features]
default = []
desktop = ["dioxus-desktop", "tokio", "tokio-tungstenite"]
server = ["axum", "dioxus-fullstack", "tokio"]
web = ["dioxus-web", "web-time"]
