[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.81"
async-std = { version = "1.12.0", optional = true }
async-process = { version = "2.1.0", optional = true }
axum = { version = "0.6.19", optional = true }
auto-deref = { path = "../auto-deref", optional = true }
chess = { path = "../chess" }
clap = { version = "4.5.4", features = ["derive"] }
confy = {  version = "0.6.1" }
database = { path = "../database" , optional = true }
dioxus = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-desktop = { git = "https://github.com/OxideOps/dioxus.git", optional = true }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-web = { git = "https://github.com/OxideOps/dioxus.git", optional = true }
futures = "0.3.30"
futures-util = "0.3.28"
getrandom = { version = "0.2.11", features = ["js"] }
js-sys = { version = "0.3.69", optional = true }
log = "0.4.21"
num_cpus = { version = "1.16.0", optional = true }
once_cell = "1.19.0"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", optional = true }
sys-info = { version = "0.9.1", optional = true }
tokio-tungstenite-wasm = "0.3.0"
tokio = { version = "1.36.0", optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.4.4", optional = true }
url = "2.4.0"
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
dotenvy = "0.15.7"
rand = "0.8.5"
palette = {  version = "0.7.5", optional = true }
bcrypt = "0.15.1"
web-sys = "0.3.69"
dioxus-router = { git = "https://github.com/OxideOps/dioxus.git" }

[features]
desktop = ["async-process", "async-std", "auto-deref", "dioxus-desktop", "num_cpus", "palette", "sys-info"]
web = ["async-std", "auto-deref", "dioxus-web", "js-sys", "palette", "wasm-bindgen", "wasm-bindgen-futures", "web-sys/Storage"]
ssr = [
    "tokio/full", "tower-http/fs", "tower",
    "dioxus-fullstack/axum", "axum",
    "database"
]
