[package]
name = "chess-app"
version = "0.1.0"
edition = "2021"

[features]
desktop = ["dioxus-desktop"]
web = ["dioxus-web"]
server = ["dioxus-fullstack/ssr"]

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = {version = "0.4.0", optional = true }
dioxus-fullstack = {version = "0.4.1", features = ["axum"] }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dioxus-web = {version = "0.4.0", optional = true}
