[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build_common = { path = "../build_common" }

[dependencies]
anyhow = "1.0.72"
async-std = "1.12.0"
async-process = { version = "2.0.0", optional = true }
auto-deref = { path = "../auto-deref" }
chess = { path = "../chess" }
clap = { version = "4.4.7", features = ["derive"] }
common = { path = "../common" }
confy = "0.5.1"
dioxus = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-desktop = { git = "https://github.com/OxideOps/dioxus.git", optional = true }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
futures = "0.3.29"
futures-util = "0.3.28"
log = "0.4.19"
num_cpus = { version = "1.16.0", optional = true }
once_cell = "1.18.0"
regex = "1.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
sys-info = { version = "0.9.1", optional = true }
tokio-tungstenite = { version = "0.20.1", optional = true }
tokio-tungstenite-wasm = "0.2.1"
url = "2.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git", features = ["web"] }
js-sys = "0.3.65"
server-functions = { path = "../server-functions", features = ["web"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"

[features]
default = ["desktop"]
desktop = ["async-process", "dioxus-fullstack/desktop", "dioxus-desktop", "num_cpus", "sys-info", "tokio-tungstenite/native-tls", "server-functions/desktop"]
