[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build_common = { path = "../build_common" }

[dependencies]
anyhow = "1.0.72"
async-std = "1.12.0"
auto-deref = { path = "../auto-deref" }
chess = { path = "../chess" }
clap = { version = "4.4.7", features = ["derive"] }
common = { path = "../common" }
confy = "0.5.1"
dioxus = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
futures = "0.3.29"
futures-util = "0.3.28"
log = "0.4.19"
once_cell = "1.18.0"
regex = "1.10.2"
serde = "1.0.192"
serde_json = "1.0.108"
tokio-tungstenite-wasm = "0.2.1"
url = "2.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git", features = ["web"] }
js-sys = "0.3.65"
server-functions = { path = "../server-functions", features = ["web"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.38"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = "2.0.0"
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git", features = ["desktop"] }
dioxus-desktop = { git = "https://github.com/OxideOps/dioxus.git" }
num_cpus = "1.16.0"
server-functions = { path = "../server-functions", features = ["desktop"] }
sys-info = "0.9.1"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
