[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
getrandom = { version = "0.2.11", features = ["js"] }
log = "0.4.19"
serde = { version = "1.0.192", features = ["derive"] }
