[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
once_cell = "1.19.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.36.0", features = ["full"] }
