[package]
name = "server-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { version = "0.1.0", path = "../chess" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/DioxusLabs/dioxus.git" }
once_cell = "1.18.0"
rand = "0.8.5"
serde = "1.0.178"
tokio = { version = "1.29.1", features = ["full"], optional = true }

[features]
desktop = []
ssr = ["dioxus-fullstack/axum", "tokio"]
web = []
