[package]
name = "server-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"], optional = true }
common = { path = "../common" }
chess = { version = "0.1.0", path = "../chess" }
dioxus = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git" }
futures = { version = "0.3.29", optional = true }
once_cell = "1.18.0"
rand = "0.8.5"
serde = { version = "1.0.191", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"], optional = true }

[features]
desktop = []
ssr = ["axum", "dioxus-fullstack/axum", "futures", "tokio"]
web = []
