[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build_common = { path = "../build_common" }

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
common = { path = "../common" }
dioxus = { git = "https://github.com/OxideOps/dioxus.git" }
dioxus-fullstack = { git = "https://github.com/OxideOps/dioxus.git", features = ["axum"] }
dioxus-logger = { version = "0.4.1", features = ["timestamps"] }
dotenvy = "0.15.7"
futures = "0.3.29"
hyper = "1.0.1"
log = "0.4.19"
server-functions = { path = "../server-functions", features = ["ssr"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower = "0.4.13"
tower-http = "0.4.3"
